# eval

./: .env.example  .gitignore  DESIGN.md  README.md  TODO.md  docker-compose.yml  score.md
backend/: .dockerignore  .env.example  .gitignore  CITATIONS.md  Dockerfile  README.md  RERANKING.md  RERANKING_DIAGRAMS.md  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  embedding.py  groq.py  llamaindex.py  security.py  supabase.py  vector.py
backend/app/routes/: admin.py  conversation.py  documents.py  query.py  upload.py  verify.py
backend/app/schema/: Enums.py  chunk.py  citation.py  conversation.py  document.py  messages.py  upload_progress.py
backend/app/service/: chunk_service.py  citation_service.py  conversation_service.py  embedding_service.py  parser_service.py  query_service.py  reranker_service.py  upload_service.py
backend/migrations/: add_conversation_tables.py  add_document_metadata_fields.py  add_token_usage.py
backend/tests/: test_reranker_service.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/contexts/: DarkModeContext.tsx
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx
